k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: unfyd-pivot
  labels:
    name: unfyd-pivot
